manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: __CI_PROJECT_NAME__
    tier: backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: api
